Fri Jun  9 05:39:06 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wsp-session.c, gw/wsp_machine-decl.h, gw/wsp_state-decl.h:
	Removed `unused' field from WSPMachine, using state == NULL_STATE
	instead.

Fri Jun  9 05:32:38 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wap-events-def.h, gw/wtp.c, gw/wsp_state-decl.h: Removed
	unused exit_info and exit_info_present fields from WAPEvents.

Fri Jun  9 05:28:12 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wtp_state-decl.h: Enabled sending of TR-Abort.ind events
	to WSP.

	* gw/wtp.c: Removed (now unused) variable current_primitive.

Fri Jun  9 05:18:07 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wap-events-def.h: Finished breaking up pack_wsp_event into
	smaller functions.

Fri Jun  9 05:10:20 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wtp.c, gw/wap-events-def.h: Removed event TR_Invoke_Cnf since
	it wasn't used and is only generated on the client side.

Fri Jun  9 04:58:02 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wap-events-def.h, gw/wtp.c: Removed unused fields wsp_pdu
	and wsp_tid from various events. Then removed code that set
	and copied them between events.

Fri Jun  9 07:44:25 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wtp.c, gw/wtp_state-decl.h: Beginning the breaking up of
	pack_wsp_event function into smaller, more well defined ones.

Fri Jun  9 06:48:42 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wap-appl.c: Combine headers for HTTP request after the
	actual list of headers has been collected.

Fri Jun  9 02:58:00 2000  Lars Wirzenius  <liw@wapit.com>

	* Implemented WSP connectionless service. This meant moving
	things around a bit. The basic approach is to treat connectionless
	mode as a level in the protocol stack that is parallel to WTP and
	session oriented WSP. That is, connectionless mode gets events
	directly from wapbox.c and feeds them to wap-appl.c, and vice
	versa for replies.
	
	* gw/bb_udp.c: Read from port 9200 as well.
	
	* gw/wap-events-def.h: Added events S_Unit_MethodInvoke_Ind and